		- Stop notes do now stop all notes of the same instrument at the same
			position (e.g. in chords or using multiple patterns).
		- MIDI export
				- does now respect virtual patterns (#513).
				- does now add tempo changes and tags in case the Timeline is used (#933).
				- does now add time signature events based on the length of the longest
				  pattern within a column (#1680).

	* Removed
		- Preferences options `restoreLastSong` and `restoreLastPlaylist` were
			dropped. Instead, both will always be restored automatically. In order to
			start with a blank song/playlist, load a new one before quitting.
		- Component mixer strips have been dropped.
		- LASH support has been dropped (#1649).
		- CMake option `MAX_NOTES` has been dropped.

XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.5
	* Changed
		- The shortcut for starting/pausing transport can now be used spin boxed
			(like the BPM one) too (#2098).
		- Combo boxes do not accept focus (and preventing shortcuts) anymore.
		- LASH support has been deprecated and will be removed in version 2.0 of
      Hydrogen (#1649).
	* Fixed
		- Fix compilation with LASH support enabled (#2076).
		- Fix Hue slider in Preferences > Appearance > Color (#2081)
		- Show the Crash Reporter and exit with return code `1` on unhandled
			exceptions.
		- Fix crashes in SampleEditor (#2092).
		- Fix track names in multi track export. When using just the file extension,
			the raw instrument names will be used (#2096).
		- Fix import bug for drumkits created in version >= 2.0.
		- Fix memory leakage for songs created in version >= 2.0.
		- Fix memory leakage for notes with probability < 1.0.
		- Fix incoming MIDI NOTE OFF handling.

2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.4
	* Added
		- MIDI and OSC commands
				- `CLEAR_SELECTED_INSTRUMENT` - to remove all notes of the selected
				  pattern associated with the currently selected instrument.